# AMP

./: .gitignore  .pre-commit-config.yaml  .replit  Dockerfile  docker-compose.dev.yml  docker-compose.yml  gunicorn.conf.py  menambahkan-file  nginx.conf  package-lock.json  package.json  pyproject.toml  replit.md  tailwind.config.js
apps/: __init__.py
attached_assets/: Pasted--SPRINT-3-5-Founder-Experience-Onboarding-Kabulhaden-Fi_1784272612720.txt  Pasted--SPRINT-3-6-PLATFORM-UI-CONSISTENCY-NAVIGATION-HARDENIN_1784303259901.txt  Pasted--SPRINT-4-0-KNOWLEDGE-BASE-REFRESH-PROJECT-REINDEX-OBJE_1784307009443.txt  Pasted--SPRINT-4-2-MEDIA-PIPELINE-ENGINE-OBJECTIVE-Bangun-Medi_1784307854866.txt  Pasted--SPRINT-4-4-2-DEMO-FREEZE-Kabulhaden-CMS-AMP-Studio-PRI_1784530744707.txt  Pasted--SPRINT-ARTIFACTS-MANDATORY--1784285604744_1784285604745.txt  Pasted-SPRINT-3-4B-AMP-STUDIO-UX-POLISH-Mode-DESIGN-EXECUTION-_1784283332207.txt  Pasted-SPRINT-3-4C-Temporary-Live-Streaming-Integration-Demo-M_1784284671515.txt  Pasted-SPRINT-3-5-AMP-Studio-UX-Transformation-GOAL-Do-NOT-mod_1784276474077.txt  Pasted-SPRINT-4-1-DEMO-READINESS-FOUNDER-EXPERIENCE-Sebelum-me_1784308849394.txt  Pasted-SPRINT-4-5-DEMO-FREEZE-VALIDATION-Priority-CRITICAL-Mod_1784528311597.txt  Pasted-SPRINT-4-5-DEMO-READINESS-VERIFICATION-END-TO-END-ACCEP_1784609854902.txt  Pasted-You-are-the-Lead-Frontend-Demo-Experience-Engineer-of-A_1784273904591.txt  Pasted-You-are-the-Lead-Frontend-Engineer-of-AMP-Studio-Aradha_1784273535945.txt
config/: __init__.py  urls.py
docs/: 01_PRODUCT_VISION.md  02_TARGET_AUDIENCE.md  (+55 more)
(+583 files in other folders)
